--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,14 @@
-*.iml
+# Gradle
 .gradle
+/build
+
+# Android Studio
+*.iml
 /local.properties
+/.idea/misc.xml
+.idea/misc.xml
+/.idea/modules.xml
+.idea/modules.xml
+/.idea/gradle.xml
 /.idea/workspace.xml
 /.idea/libraries
-/.idea/misc.xml
-/.idea/modules.xml
-.DS_Store
-/build
-/captures
-.externalNativeBuild
