Move app to IcyNote/app and adapt gradle

--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,7 @@
 
 # Android Studio
 *.iml
-local.properties
-.idea/*
 /local.properties
-/.idea/*
+/.idea/gradle.xml
+/.idea/workspace.xml
+/.idea/libraries
