--- a/IcyNote/app/build.gradle
+++ b/IcyNote/app/build.gradle
@@ -39,11 +39,11 @@ android {
 
 dependencies {
     compile 'com.android.support:appcompat-v7:24.2.1'
-
     androidTestCompile 'junit:junit:4.12'
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
+    compile 'com.android.support:design:24.2.1'
 }
 
 // Do not change the below code unless you're sure you know what you're doing
