Migrate UI to new file organisation

--- a/IcyNote/app/src/main/AndroidManifest.xml
+++ b/IcyNote/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="ch.epfl.sweng.project">
+          package="icynote.ui">
 
     <!-- TODO: Depending on your app's features, enable some Android features here
                such as backups or search indexing -->
