--- a/IcyNote/app/build.gradle
+++ b/IcyNote/app/build.gradle
@@ -47,6 +47,7 @@ dependencies {
     })
 
     testCompile 'junit:junit:4.12'
+    compile 'com.android.support:design:24.2.1'
 }
 
 // Do not change the below code unless you're sure you know what you're doing
