--- a/IcyNote/app/build.gradle
+++ b/IcyNote/app/build.gradle
@@ -27,11 +27,12 @@ android {
         }
     }
 
-	lintOptions {
-	    // Disable lint warnings about app indexing, and about non-latest tools versions
-		// TODO consider re-enabling app indexing before publishing your application.
-	    disable 'GoogleAppIndexingWarning', 'GradleDependency'
-	}
+    lintOptions {
+        // Disable lint warnings about app indexing, and about non-latest tools versions
+        // TODO consider re-enabling app indexing before publishing your application.
+        disable 'GoogleAppIndexingWarning', 'GradleDependency'
+        return void
+    }
 
     // Workaround for an Android Studio bug in the "Missing Return Statement" warning
     return void
@@ -44,6 +45,8 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
+
+    testCompile 'junit:junit:4.12'
 }
 
 // Do not change the below code unless you're sure you know what you're doing
@@ -59,12 +62,12 @@ task jacocoReport(type: JacocoReport, dependsOn: "connectedAndroidTest") {
     classDirectories = fileTree(
             dir: '**/classes',
             excludes: [
-                '**/R.class',
-                '**/R$*.class',
-                '**/BuildConfig.*',
-                '**/Manifest*.*',
-                '**/*Test*.*',
-                '**/android/**/*.*'
+                    '**/R.class',
+                    '**/R$*.class',
+                    '**/BuildConfig.*',
+                    '**/Manifest*.*',
+                    '**/*Test*.*',
+                    '**/android/**/*.*'
             ]
     )
 
