--- a/IcyNote/app/build.gradle
+++ b/IcyNote/app/build.gradle
@@ -6,14 +6,12 @@ android {
     buildToolsVersion "24.0.2"
 
     defaultConfig {
-        applicationId "ch.epfl.sweng.project"
-        minSdkVersion 15
+        applicationId "icynote.ui" //do not change, used by login service
+        minSdkVersion 16
         targetSdkVersion 24
-
         versionCode 1
         versionName "1.0"
-
-        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        testInstrumentationRunner 'android.support.test.runner.AndroidJUnitRunner'
     }
 
     buildTypes {
@@ -40,6 +38,13 @@ android {
 
 dependencies {
     compile 'com.android.support:appcompat-v7:24.2.1'
+
+    // Firebase Authentication
+    compile 'com.google.firebase:firebase-auth:9.6.1'
+
+    // Google Sign In SDK (only required for Google Sign In)
+    compile 'com.google.android.gms:play-services-auth:9.6.1'
+
 
     androidTestCompile 'junit:junit:4.12'
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
@@ -75,3 +80,5 @@ task jacocoReport(type: JacocoReport, dependsOn: "connectedAndroidTest") {
 
     executionData = files('build/outputs/code-coverage/connected/coverage.ec')
 }
+
+apply plugin: 'com.google.gms.google-services'
