--- a/IcyNote/app/src/main/AndroidManifest.xml
+++ b/IcyNote/app/src/main/AndroidManifest.xml
@@ -2,20 +2,30 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
           package="icynote.ui">
 
-    <!-- TODO: Depending on your app's features, enable some Android features here
-               such as backups or search indexing -->
+
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="false"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:supportsRtl="false">
-        <activity android:name="icynote.ui.MainActivity">
+        android:supportsRtl="true"
+        android:theme="@style/AppTheme">
+        <activity android:name="icynote.ui.LoginMenu">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN"/>
+                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER"/>
+                <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name="icynote.ui.GoogleSignIn"
+            android:label="@string/label_google_sign_in" />
+        <activity
+            android:name="icynote.ui.EmailPasswordLogin"
+            android:label="@string/label_emailpassword"
+            android:windowSoftInputMode="stateAlwaysHidden" />
+
+        <activity android:name="icynote.ui.MainActivity" />
     </application>
 </manifest>
