--- a/build.gradle
+++ b/build.gradle
@@ -1,10 +1,12 @@
 buildscript {
     repositories {
         jcenter()
+        mavenLocal()
     }
 
     dependencies {
         classpath 'com.android.tools.build:gradle:2.2.2'
+        classpath 'com.google.gms:google-services:3.0.0'
         classpath 'org.jacoco:org.jacoco.core:0.7.7.201606060606'
 
         // Don't place your app dependencies here, but in the individual module build.gradle files
@@ -14,6 +16,8 @@ buildscript {
 allprojects {
     repositories {
         jcenter()
+        maven { url 'https://maven.fabric.io/public' }
+        mavenLocal()
     }
 }
 
