--- a/IcyNote/app/src/main/AndroidManifest.xml
+++ b/IcyNote/app/src/main/AndroidManifest.xml
@@ -9,8 +9,8 @@
         android:allowBackup="false"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme">
-        <activity android:name="icynote.ui.MainActivity">
+        android:theme="@style/AppTheme.Dark">
+        <activity android:name="icynote.ui.MyApp">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
