--- a/IcyNote/app/src/main/AndroidManifest.xml
+++ b/IcyNote/app/src/main/AndroidManifest.xml
@@ -8,8 +8,7 @@
     <application
         android:allowBackup="false"
         android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name"
-        android:theme="@style/AppTheme.Dark">
+        android:label="@string/app_name">
         <activity android:name="icynote.ui.MyApp">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
