--- a/IcyNote/app/src/main/AndroidManifest.xml
+++ b/IcyNote/app/src/main/AndroidManifest.xml
@@ -9,7 +9,7 @@
         android:allowBackup="false"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name">
-        <activity android:name="icynote.ui.MyApp">
+        <activity android:name="icynote.ui.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
