--- a/IcyNote/app/build.gradle
+++ b/IcyNote/app/build.gradle
@@ -48,6 +48,7 @@ dependencies {
 
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:design:24.2.1'
+    compile 'me.gujun.android.taggroup:library:1.4@aar'
 }
 
 // Do not change the below code unless you're sure you know what you're doing
