--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,7 @@
 /.idea/gradle.xml
 /.idea/workspace.xml
 /.idea/libraries
+
+/.idea/codeStyleSettings.xml
+/.idea/inspectionProfiles/SwEng.xml
+/.idea/inspectionProfiles/profiles_settings.xml
