--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,8 @@
 /.idea/gradle.xml
 /.idea/workspace.xml
 /.idea/libraries
+
+# .idea
+/.idea/codeStyleSettings.xml
+/.idea/inspectionProfiles/profiles_settings.xml
+/.idea/inspectionProfiles/SwEng.xml
