--- a/IcyNote/app/build.gradle
+++ b/IcyNote/app/build.gradle
@@ -54,6 +54,12 @@ dependencies {
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:design:24.2.1'
     compile 'me.gujun.android.taggroup:library:1.4@aar'
+
+    testCompile 'org.mockito:mockito-core:1.+'
+    // required if you want to use Mockito for Android instrumentation tests
+    androidTestCompile 'org.mockito:mockito-core:1.+'
+    androidTestCompile "com.google.dexmaker:dexmaker:1.2"
+    androidTestCompile "com.google.dexmaker:dexmaker-mockito:1.2"
 }
 
 // Do not change the below code unless you're sure you know what you're doing
