Refactor logout and create account linking

--- a/IcyNote/app/build.gradle
+++ b/IcyNote/app/build.gradle
@@ -50,12 +50,12 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    testCompile "org.mockito:mockito-core:1.+"
-    // required if you want to use Mockito for Android instrumentation tests
     androidTestCompile 'org.mockito:mockito-core:1.+'
     androidTestCompile "com.google.dexmaker:dexmaker:1.2"
     androidTestCompile "com.google.dexmaker:dexmaker-mockito:1.2"
+    androidTestCompile 'org.testng:testng:6.9.6'
 
+    testCompile "org.mockito:mockito-core:1.+"
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:design:24.2.1'
     compile 'me.gujun.android.taggroup:library:1.4@aar'
