implement settings and update / create necessary code in other classes

--- a/IcyNote/app/src/main/AndroidManifest.xml
+++ b/IcyNote/app/src/main/AndroidManifest.xml
@@ -32,6 +32,8 @@
         <activity android:name=".GoogleLinkCredentials"/>
         <activity android:name=".GoogleUnLinkCredentials"/>
         <activity android:name=".MainActivity"/>
+
+        <activity android:name=".Preferences"/>
     </application>
 </manifest>
 
