--- a/IcyNote/app/src/main/AndroidManifest.xml
+++ b/IcyNote/app/src/main/AndroidManifest.xml
@@ -2,12 +2,14 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
           package="icynote.ui">
 
-    <uses-permission android:name="android.permission.INTERNET"/>
 
-    <!--
-     TODO: Depending on your app's features, enable some Android features here
-               such as backups or search indexing
-    -->
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+
+    <uses-feature
+        android:name="android.hardware.camera"
+        android:required="false" />
+
     <application
         android:allowBackup="false"
         android:icon="@mipmap/ic_launcher"
@@ -34,5 +36,15 @@
         <activity android:name=".MainActivity"/>
 
         <activity android:name=".Preferences"/>
+
+        <provider
+            android:name="android.support.v4.content.FileProvider"
+            android:authorities="icynote.ui.fileprovider"
+            android:exported="false"
+            android:grantUriPermissions="true">
+            <meta-data
+                android:name="android.support.FILE_PROVIDER_PATHS"
+                android:resource="@xml/file_paths" />
+        </provider>
     </application>
 </manifest>
