--- a/IcyNote/app/src/main/AndroidManifest.xml
+++ b/IcyNote/app/src/main/AndroidManifest.xml
@@ -5,6 +5,10 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
 
+    <!--
+     TODO: Depending on your app's features, enable some Android features here
+               such as backups or search indexing
+    -->
     <application
         android:allowBackup="false"
         android:icon="@mipmap/ic_launcher"
@@ -28,4 +32,5 @@
 
         <activity android:name="icynote.ui.MainActivity" />
     </application>
+
 </manifest>
