--- a/IcyNote/app/build.gradle
+++ b/IcyNote/app/build.gradle
@@ -38,13 +38,10 @@ android {
 
 dependencies {
     compile 'com.android.support:appcompat-v7:24.2.1'
-
-    // Firebase Authentication
     compile 'com.google.firebase:firebase-auth:9.6.1'
-
-    // Google Sign In SDK (only required for Google Sign In)
     compile 'com.google.android.gms:play-services-auth:9.6.1'
-
+    compile 'com.android.support:design:24.2.1'
+    compile 'me.gujun.android.taggroup:library:1.4@aar'
 
     androidTestCompile 'junit:junit:4.12'
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
@@ -53,18 +50,10 @@ dependencies {
     androidTestCompile 'org.mockito:mockito-core:1.+'
     androidTestCompile "com.google.dexmaker:dexmaker:1.2"
     androidTestCompile "com.google.dexmaker:dexmaker-mockito:1.2"
-    androidTestCompile 'org.testng:testng:6.9.6'
+    //androidTestCompile 'org.testng:testng:6.9.6'
 
     testCompile "org.mockito:mockito-core:1.+"
     testCompile 'junit:junit:4.12'
-    compile 'com.android.support:design:24.2.1'
-    compile 'me.gujun.android.taggroup:library:1.4@aar'
-
-    testCompile 'org.mockito:mockito-core:1.+'
-    // required if you want to use Mockito for Android instrumentation tests
-    androidTestCompile 'org.mockito:mockito-core:1.+'
-    androidTestCompile "com.google.dexmaker:dexmaker:1.2"
-    androidTestCompile "com.google.dexmaker:dexmaker-mockito:1.2"
 }
 
 // Do not change the below code unless you're sure you know what you're doing
