Refactor NotesList to MVC

--- a/IcyNote/app/src/main/AndroidManifest.xml
+++ b/IcyNote/app/src/main/AndroidManifest.xml
@@ -33,7 +33,8 @@
         <activity android:name=".loginactivities.SignOut"/>
         <activity android:name=".loginactivities.GoogleLinkCredentials"/>
         <activity android:name=".loginactivities.GoogleUnLinkCredentials"/>
-        <activity android:name=".MainActivity"/>
+        <activity android:name=".MainActivity"
+            android:windowSoftInputMode="stateHidden" />
 
         <activity android:name=".Preferences"/>
 
