--- a/.gitignore
+++ b/.gitignore
@@ -4,11 +4,9 @@
 
 # Android Studio
 *.iml
+IcyNote/app/app.iml
+local.properties
+.idea/*
 /local.properties
-/.idea/gradle.xml
-/.idea/workspace.xml
-/.idea/libraries
+/.idea/*
 
-/.idea/codeStyleSettings.xml
-/.idea/inspectionProfiles/SwEng.xml
-/.idea/inspectionProfiles/profiles_settings.xml
