--- a/IcyNote/app/src/main/AndroidManifest.xml
+++ b/IcyNote/app/src/main/AndroidManifest.xml
@@ -36,7 +36,7 @@
         <activity android:name=".MainActivity"
             android:windowSoftInputMode="stateHidden" />
 
-        <activity android:name=".Preferences"/>
+        <activity android:name=".fragments.Preferences"/>
 
         <provider
             android:name="android.support.v4.content.FileProvider"
