--- a/IcyNote/app/src/main/AndroidManifest.xml
+++ b/IcyNote/app/src/main/AndroidManifest.xml
@@ -47,6 +47,13 @@
             </intent-filter>
         </activity>
 
+        <activity android:name=".view.MockMetadataNote">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN"/>
+                <category android:name="android.intent.category.LAUNCHER"/>
+            </intent-filter>
+        </activity>
+
 
 
         <activity android:name=".view.MockNotesList">
