--- a/IcyNote/app/build.gradle
+++ b/IcyNote/app/build.gradle
@@ -47,6 +47,8 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
+    androidTestCompile 'com.android.support.test.espresso:espresso-intents:2.2.2'
+
     androidTestCompile 'org.mockito:mockito-core:1.+'
     androidTestCompile "com.google.dexmaker:dexmaker:1.2"
     androidTestCompile "com.google.dexmaker:dexmaker-mockito:1.2"
