--- a/IcyNote/app/build.gradle
+++ b/IcyNote/app/build.gradle
@@ -38,6 +38,9 @@ android {
 
 dependencies {
     compile 'com.android.support:appcompat-v7:24.2.1'
+    compile 'com.android.support:preference-v7:24.2.1'
+    compile 'com.android.support:support-v4:24.2.1'
+
     compile 'com.google.firebase:firebase-auth:9.6.1'
     compile 'com.google.android.gms:play-services-auth:9.6.1'
     compile 'com.android.support:design:24.2.1'
