--- a/IcyNote/app/build.gradle
+++ b/IcyNote/app/build.gradle
@@ -43,6 +43,7 @@ dependencies {
 
     compile 'com.google.firebase:firebase-auth:9.6.1'
     compile 'com.google.android.gms:play-services-auth:9.6.1'
+    compile 'com.google.android.gms:play-services-drive:9.6.1'
     compile 'com.android.support:design:24.2.1'
     compile 'me.gujun.android.taggroup:library:1.4@aar'
 
